# frappectl

./: .gitignore  PLAYBOOK.md  README.md  README.txt  pyproject.toml  test_core.py  test_integrations_imports.py  test_phase5.py  test_shell.py
.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _random.data.json  _random.meta.json  _sitebuiltins.data.json  _sitebuiltins.meta.json  _socket.data.json  (+135 more)
book/: 00-install-the-cli.md  01-bench-lifecycle.md  02-app-management.md  03-default-site-and-site-management.md  04-backup-and-restore.md  05-updates-upgrades-and-maintenance.md  06-scheduler-workers-and-jobs.md  07-production-and-service-control.md  08-diagnostics-and-admin-tools.md  09-dangerous-operations.md  README.md
docs/: roadmap.txt
prompt-setpup/: apps.txt  bench-implementation-checklist.md  bench.txt  roadmap.txt  step1.txt  step10.txt  step11.txt  step12.txt  step2.txt  step3.txt  step4.txt  step5.txt  step6.txt  step7.txt  step8.txt  step9.txt
scripts/: dev-install.sh  install.sh
(+292 files in other folders)
