[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frappectl"
version = "0.1.0"
description = "Frappe Bench CLI"
authors = [{ name = "You" }]
requires-python = ">=3.10"
dependencies = [
    "typer[all]",
    "pyyaml",
]

[project.scripts]
frappectl = "frappectl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
